NIAD-2189 integration tests and unit tests added. need to fix the gradle checks